Closed
Bug 812212
Opened 13 years ago
Closed 13 years ago
SeaMonkey trunk fails to compile (nsIPop3Service.idl)
Categories
(MailNews Core :: Build Config, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 19.0
People
(Reporter: mcsmurf, Assigned: standard8)
Details
Attachments
(1 file)
|
1.79 KB,
patch
|
mcsmurf
:
review+
|
Details | Diff | Splinter Review |
The current SeaMonkey trunk build fails to compile on OSX, 64 bit build (clobber build on buildbox):
/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/_virtualenv/bin/python -u /builds/slave/comm-cen-trunk-osx64/build/mozilla/config/pythonpath.py \
-I/builds/slave/comm-cen-trunk-osx64/build/mozilla/other-licenses/ply \
/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/header.py -I/builds/slave/comm-cen-trunk-osx64/build/mailnews/local/public -I../../../mozilla/dist/idl -I/builds/slave/comm-cen-trunk-osx64/build/mailnews/base/public /builds/slave/comm-cen-trunk-osx64/build/mailnews/local/public/nsIPop3IncomingServer.idl -d .deps/nsIPop3IncomingServer.h.pp -o _xpidlgen/nsIPop3IncomingServer.h
nsIPop3Service.idl
Traceback (most recent call last):
File "/builds/slave/comm-cen-trunk-osx64/build/mozilla/config/pythonpath.py", line 56, in <module>
main(sys.argv[1:])
File "/builds/slave/comm-cen-trunk-osx64/build/mozilla/config/pythonpath.py", line 48, in main
execfile(script, frozenglobals)
File "/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/header.py", line 524, in <module>
idl.resolve(options.incdirs, p)
File "/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/xpidl.py", line 287, in resolve
p.resolve(self)
File "/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/xpidl.py", line 251, in resolve
self.IDL.resolve(parent.incdirs, parent.parser)
File "/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/xpidl.py", line 287, in resolve
p.resolve(self)
File "/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/xpidl.py", line 253, in resolve
parent.setName(type)
File "/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/xpidl.py", line 265, in setName
self.namemap.set(object)
File "/builds/slave/comm-cen-trunk-osx64/build/objdir/i386/mozilla/dist/sdk/bin/xpidl.py", line 211, in set
raise IDLError("name '%s' specified twice. Previous location: %s" % (object.name, self._d[object.name].location), object.location)
xpidl.IDLError: error: name 'nsIMsgCompFields' specified twice. Previous location: /builds/slave/comm-cen-trunk-osx64/build/mailnews/compose/public/nsIMsgCompFields.idl line 11:0
interface nsIMsgCompFields : nsISupports {
^, ../../../mozilla/dist/idl/nsIMsgCompFields.idl line 11:0
interface nsIMsgCompFields : nsISupports {
^
NEXT ERROR make[8]: *** [_xpidlgen/nsIImportService.h] Error 1
make[8]: *** Deleting file `_xpidlgen/nsIImportService.h'
make[7]: *** [public_export] Error 2
make[6]: *** [import_export] Error 2
| Reporter | ||
Comment 1•13 years ago
|
||
Actually the problem is in nsIImportService.idl I think (parallel build, so not sure how much the build log gets messed up)
| Assignee | ||
Comment 2•13 years ago
|
||
Ok, I found two failures in looking at the logs. This is fallout from changing the mailnews build structures.
This should fix both the failures - basically rearranging the includes and replacing some by interface pre-definitions so that we're reducing the complexity of the idl includes system.
Attachment #682457 -
Flags: review?(bugzilla)
| Assignee | ||
Comment 3•13 years ago
|
||
p.s. feel free to land this on my behalf if I'm not about.
| Reporter | ||
Comment 4•13 years ago
|
||
Comment on attachment 682457 [details] [diff] [review]
Possible fix
Looks good.
Attachment #682457 -
Flags: review?(bugzilla) → review+
| Reporter | ||
Comment 5•13 years ago
|
||
Assignee: nobody → mbanner
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 19.0
You need to log in
before you can comment on or make changes to this bug.
Description
•