Bug 812212 - SeaMonkey trunk fails to compile (nsIPop3Service.idl), r=mcsmurf